--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.7",
     "pinia": "^2.1.7",
     "view-ui-plus": "^1.3.15",
     "vue": "^3.3.11",
-    "vue-router": "^4.2.5"
+    "vue-native-websocket": "^2.0.15",
+    "vue-router": "^4.2.5",
+    "ws": "^8.16.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.2",
