--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,3 @@
 # 開發的環境 
-VITE_API_URL=http://localhost/pxzoo
-VITE_IMAGES_BASE_URL=../assets/images
-VITE_IMAGES_BASE_URL2=../../assets/images
+VITE_API_URL=http://localhost/g4/api
+VITE_IMAGES_BASE_URL=http://localhost/g4/images
