--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chenfengyuan/vue-qrcode": "^2.0.0",
     "aos": "^2.3.4",
     "axios": "^1.6.7",
     "pinia": "^2.1.7",
     "view-ui-plus": "^1.3.15",
     "vue": "^3.3.11",
     "vue-native-websocket": "^2.0.15",
+    "vue-qrcode": "^2.2.2",
     "vue-router": "^4.2.5",
     "ws": "^8.16.0"
   },
