--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "pinia": "^2.1.7",
     "view-ui-plus": "^1.3.15",
     "vue": "^3.3.11",
+    "vue-cropper": "^1.1.1",
     "vue-native-websocket": "^2.0.15",
     "vue-qrcode": "^2.2.2",
     "vue-router": "^4.2.5",
